--- a/login/home.html
+++ b/login/home.html
@@ -71,9 +71,9 @@
 					
 					<p id="logout"  style="border-radius:60px"><a href="../index.html" >Log Out</a></p>
 				</div>
-				<div id="allComments" style="background-color: white;margin-top: 300px;border-radius: 10px;position: fixed;width:200px">
+				<!-- <div id="allComments" style="background-color: white;margin-top: 300px;border-radius: 10px;position: fixed;width:200px">
 					
-				</div>
+				</div> -->
 				<!-- End of sidebar left -->
 			</div>
 			<!-- End of leftfixed -->
