--- a/index.html
+++ b/index.html
@@ -32,9 +32,12 @@
 
 			</form>
 		</div>
+		<p>Username : kminchelle </p>
+		<p>Password : 0lelplR </p>
 	</div>
-
+	
 	<div class="main">
+		
 		<div class="wrapper">
 			<img src="images/programmer-blue.svg" class="logopic"/>
 
