--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<form style="margin-left:600px" >
 				<table id="login">
 					<tr style="height: 20px">
-						<td><label for="email">Email</label> </td>
+						<td><label for="email">Username</label> </td>
 						<td><label for="logpassword">Password</label></td>
 						<td rowspan=3><button type="submit" id="submit" class="btn btn-primary">Login</button></td>
 					</tr>
